Fix for BUG#35570 "CHECKSUM TABLE unreliable if LINESTRING field (same content / differen checksum)" This will be back-ported to 5.x trees but the work for R-tree logging critically needs this patch in Maria now.

mysql-test/r/myisam.result:
  checksums are identical; without the code fix they were all different
mysql-test/t/myisam.test:
  test that same tables give same checksums
sql/sql_table.cc:
  Type GEOMETRY is implemented on top of type BLOB, so, just like for BLOB, its 'field' contains pointers
  which it does not make sense to include in the checksum; it rather has to be converted to a string and
  then we can compute the checksum.